# persistent-hspec-example

./: .gitignore  DB.hs  Import.hs  LICENSE  Migrate.hs  README.md  persistent-hspec-sample.cabal
DB/: Order.hs
Test/: Helper.hs  Spec.hs
Test/DB/: OrderSpec.hs
