name:                persistent-hspec-sample
version:             0.1.0.0
synopsis: An example for testing database access with hspec
license:             BSD3
license-file:        LICENSE
author:              Fujimura Daisuke
maintainer:          me@fujimuradaisuke.com
category:            Database
build-type:          Simple
cabal-version:       >=1.8
library
  build-depends:       base                == 4.5.*
                     , persistent-template == 0.9.*
                     , text                == 0.11.*
                     , mtl                 == 2.1.*
                     , persistent          == 0.9.*
                     , persistent-sqlite   == 0.9.*
test-suite specs
  type:                exitcode-stdio-1.0
  main-is:             test/Spec.hs
  build-depends:       base                == 4.5.*
                     , persistent-template == 0.9.*
                     , text                == 0.11.*
                     , mtl                 == 2.1.*
                     , persistent          == 0.9.*
                     , persistent-sqlite   == 0.9.*
                     , hspec               == 1.3.*
                     , hspec-expectations  == 0.3.*
